@@ -1,3 +1,7 @@
+2008-11-01  Kouhei Sutou  <kou@cozmixng.org>
+
+	* src/: use RARRAY_PTR() and RARRAY_LEN().
+
 2008-06-14  Kouhei Sutou  <kou@cozmixng.org>
 
 	* test/run-test.rb: use glib/test/glib-test-init.rb.
